--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+<link href="/assets/images/icon/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
 
 <script type="text/javascript">
 var _gaq = _gaq || [];
