--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,17 +7,17 @@
 
     <div id="disqus_thread"></div>
 
-    <script type="text/javascript">
-      var disqus_shortname = '{{ site.disqus_shortname }}';
-      var disqus_identifier = '{{ page.id }}';
-      var disqus_title = '{{ page.title }}';
-      var disqus_url = '{{ site.url }}{{ post.url }}';
-      /*var disqus_developer = 1;*/
-
+    <script>
+      var disqus_config = function () {
+        this.page.url = '{{ page.url | absolute_url }}';
+        this.page.identifier = '{{ page.url | absolute_url }}';
+      };
+  
       (function() {
-          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        var d = document, s = d.createElement('script');
+        s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
       })();
     </script>
 
