--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,15 +8,16 @@
     <div id="disqus_thread"></div>
 
     <script type="text/javascript">
-      var disqus_shortname = '{{ site.disqus_shortname }}';
-      var disqus_identifier = '{{ page.id }}';
-      var disqus_title = '{{ page.title }}';
-      var disqus_url = '{{ site.url }}{{ post.url }}';
-      /*var disqus_developer = 1;*/
+      var disqus_config = function () {
+        var disqus_identifier = '{{ page.id }}';
+        var disqus_title = '{{ page.title }}';
+        var disqus_url = '{{ site.url }}{{ post.url }}';
+        /*var disqus_developer = 1;*/
+      };
 
       (function() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          dsq.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
     </script>
