--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,12 +8,11 @@
     <div id="disqus_thread"></div>
 
     <script type="text/javascript">
-      var disqus_config = function () {
-        var disqus_identifier = '{{ page.id }}';
-        var disqus_title = '{{ page.title }}';
-        var disqus_url = '{{ site.url }}{{ post.url }}';
-        /*var disqus_developer = 1;*/
-      };
+      var disqus_shortname = '{{ site.disqus_shortname }}';
+      var disqus_identifier = '{{ page.id }}';
+      var disqus_title = '{{ page.title }}';
+      var disqus_url = '{{ site.url }}{{ post.url }}';
+      /*var disqus_developer = 1;*/
 
       (function() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
