main background image 변경 및 기존 이미지 삭제

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,7 +38,7 @@
 //
 // Site header
 .header {
-  background: #292929 url(../images/cover.jpg) no-repeat 50% 0px;
+  background: #292929 url(../assets/images/back-ground/kilimanjaro.jpg) no-repeat 50% 0px;
   @include background-size(cover);
   border-bottom: 1px solid $gray-color-light;
   border-top: 3px solid $primary-color;
