header title 변경

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 
     {% if page.slug == 'home' %}
       <h2 class="txt-center">
-        Welcome to <strong>{{ site.title }}</strong>!
+        Java, Spring 등 개발 학습 블로그
       </h2>
     {% endif %}
 
