google adsense 코드 기입

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,3 +28,4 @@ _gaq.push(['_trackPageview']);
   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();
 </script>
+<script data-ad-client="ca-pub-9828689447102732" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
