--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -355,3 +355,21 @@
     font-size: 12px;
   }
 }
+
+// Youtube iframe
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
