--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 ---
-<article class="post container card">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-  <div class="post-content">
+
+<article class="page">
+
+  <h1>{{ page.title }}</h1>
+
+  <div class="entry">
     {{ content }}
   </div>
 </article>
