--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,37 +1,42 @@
 ---
 layout: default
-slug: single
 ---
-<article class="post container card">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <span class="post-meta">
-      <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date: "%b %-d, %Y" }}</time>
-      <span class="post-author">by {{ site.author.name }}</span>
-    </span>
-  </header>
 
-  <div class="post-content">
+<article class="post">
+  <h1>{{ page.title }}</h1>
 
+  <div class="entry">
     {{ content }}
-
-    <aside class="share">
-
-      <span>Share this: </span>
-
-      <a href="http://twitter.com/share?text={{page.title}}&amp;url={{site.url}}{{ page.url }}&amp;hashtags=web,dev,blog,soudev&amp;via=nandomoreirame"
-      onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-        <i class="fa fa-twitter-square"></i>
-      </a>
-
-      <a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}"
-      onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-        <i class="fa fa-facebook-square"></i>
-      </a>
-
-    </aside>
-
-    {% include comments.html %}
-
   </div>
+
+  <div class="date">
+    <i class="fa fa-calendar fa-fw" aria-hidden="true"></i>&nbsp;Date:<span style="color: #333333; font-weight: normal;">&nbsp;{{ page.date | date: "%B %e, %Y" }}</span>
+  </div>
+
+  <div class="post-categories">
+    <i class="fa fa-tags fa-fw" aria-hidden="true"></i>&nbsp;Tags:&nbsp;
+      {% if post %}
+      {% assign categories = post.categories %}
+      {% else %}
+      {% assign categories = page.categories %}
+      {% endif %}
+      {% for category in categories %}
+      <a class="categories-button"<a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+      {% unless forloop.last %}{% endunless %}
+      {% endfor %}
+  </div>
+
+  <div class="share-post">
+    <i class="fa fa-share-alt-square fa-fw" aria-hidden="true"></i>&nbsp;Share:&nbsp;
+    {% include share-buttons.html %}
+  </div>
+
+  <div class="related-posts">
+    {% include related-posts.html %}
+  </div>
+
+  <div class="post-nav">
+    {% include post-nav.html %}
+  </div>
+
 </article>
