--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,15 +2,28 @@
 <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
-
+<meta name="twitter:card" content="summary" /> 
 {% if page.excerpt %}
 <meta name="description" content="{{ page.excerpt| strip_html }}" />
 <meta property="og:description" content="{{ page.excerpt| strip_html }}" />
+<meta name="twitter:description" content="{{ page.excerpt| strip_html }}" /> 
 {% else %}
-<meta name="description" content="{{ site.description }}">
-<meta property="og:description" content="{{ site.description }}" />
+<meta name="description" content="{{ site.description | strip}}">
+<meta property="og:description" content="{{ site.description | strip }}" />
+<meta name="twitter:description" content="{{ site.description | strip}}" /> 
+{% endif %}
+
+{% if page.image %}
+<meta name="image" content="{{ page.image }}">
+<meta property="og:image" content="{{ page.image }}" />
+<meta name="twitter:image" content="{{ page.image }}" /> 
+{% else %}
+<meta name="image" content="{{ site.image }}">
+<meta property="og:image" content="{{ site.image }}" />
+<meta name="twitter:image" content="{{ site.image }}" /> 
 {% endif %}
 <meta name="author" content="{{ site.name }}" />
+<meta property="og:url" content="{{ site.url}}{{ page.url }}" />
 
 {% if page.title %}
 <meta property="og:title" content="{{ page.title }}" />
