FEAT(utterances): comment 기능 추가
- style css 수정 및 comment script 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,3 +40,12 @@ layout: default
   </div>
 
 </article>
+
+<script src="https://utteranc.es/client.js"
+repo="jun7343/jun7343.github.io"
+issue-term="title"
+label="Comment"
+theme="github-dark"
+crossorigin="anonymous"
+async>
+</script>
