--- a/style.scss
+++ b/style.scss
@@ -204,6 +204,7 @@ hr {
   font-size: 18px !important;
   margin-top:30px;
   clear: both;
+  display: flow-root;
 
     p {
       .post-nav-label {
@@ -223,6 +224,10 @@ hr {
         float: right;
       }
     }
+}
+
+.utterances {
+  margin-top: 30px;
 }
 
 .category-head {
